fixed navbar overflow issue

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,7 +27,6 @@ body, html{
     height: 100%;
     margin: 0;
     max-width: 100%;
-    overflow-x: hidden;
     font-size: 0.85em;
     font-family: 'Lato', sans-serif;
     scroll-behavior: smooth;
